--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="col leaderboard">
             <ul class="list-group">
                 <li class="list-group-item">Kushal</li>
-                <li class="list-group-item">Krishna Chaitanya</li>
+                <li class="list-group-item">Krishna Chaitanya The Hero</li>
                 <li class="list-group-item">Saketh</li>
                 <li class="list-group-item">Shashmith</li>
                 <li class="list-group-item">Rishi</li>
