--- a/index.html
+++ b/index.html
@@ -1,43 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div class="row">
-        <div class="col game-body">
-            <div class="account">
-                <button type="button" class="btn btn-primary btn-circle btn-xl">Blue</button>
-            </div>
-            <div class="title">
-                <h1>Theen Titans</h1>
-            </div>
-            <div class="buttons">
-                <div class="create_game">
-                    <button type="button" class="btn btn-primary">Create Room</button>
-                    <button type="button" class="btn btn-primary">Join Room</button>
-                </div>
-            </div>
-            <div class="extra">
-                <a href="">Create an account</a>
-            </div>
+      <div class="col game-body">
+        <div class="account">
+          <button
+            type="button"
+            class="btn btn-primary btn-circle btn-xl"
+            onclick="location.href = './Profile/user.html'"
+          >
+            Blue
+          </button>
         </div>
-        <div class="col leaderboard">
-            <ul class="list-group">
-                <li class="list-group-item">Kushal</li>
-                <li class="list-group-item">Krishna Chaitanya</li>
-                <li class="list-group-item">Saketh</li>
-                <li class="list-group-item">Shashmith</li>
-                <li class="list-group-item">Rishi</li>
-              </ul>
+        <div class="title">
+          <h1>Theen Titans</h1>
+        </div>
+        <div class="buttons">
+          <div class="create_game">
+            <button type="button" class="btn btn-primary">Create Room</button>
+            <button type="button" class="btn btn-primary">Join Room</button>
+          </div>
+        </div>
+        <div class="extra">
+          <a href="">Create an account</a>
         </div>
       </div>
-</body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-
+      <div class="col leaderboard">
+        <ul class="list-group">
+          <li class="list-group-item">Kushal</li>
+          <li class="list-group-item">Krishna Chaitanya</li>
+          <li class="list-group-item">Saketh</li>
+          <li class="list-group-item">Shashmith</li>
+          <li class="list-group-item">Rishi</li>
+        </ul>
+      </div>
+    </div>
+  </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"
+  ></script>
 </html>
