--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col game-body">
             <div class="account">
-                <button type="button" class="btn btn-primary btn-circle btn-xl">Blue</button>
+                <button type="button" class="btn btn-primary btn-circle btn-xl">Blues</button>
             </div>
             <div class="title">
                 <h1>Theen Titans</h1>
