--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <div class="row">
         <div class="col game-body">
             <div class="account">
-                <button type="button" class="btn btn-primary btn-circle btn-xl">Blues</button>
+                <form action="/account">
+                    <button class="btn btn-primary btn-circle btn-xl" type="submit">Account</button>
+                </form>
             </div>
             <div class="title">
                 <h1>Theen Titans</h1>
@@ -20,11 +22,19 @@
             <div class="buttons">
                 <div class="create_game">
                     <button type="button" class="btn btn-primary">Create Room</button>
-                    <button type="button" class="btn btn-primary">Join Room</button>
+                    <div class="lobby" id="lobby">
+                        <h2>Your room Code is:1234</h2>
+                        <h3>Waiting for player to join...</h3>
+                        <button type="button" class="btn btn-primary" onclick="close1()">close</button>
+                    </div>
+                    <button type="button" class="btn btn-primary" onclick="open1()">Join Room</button>
                 </div>
             </div>
             <div class="extra">
                 <a href="">Create an account</a>
+            </div>
+            <div>
+                <h1 class="test"></h1>
             </div>
         </div>
         <div class="col leaderboard">
@@ -39,5 +49,6 @@
       </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-
+<script src="https://cdn.socket.io/4.5.3/socket.io.min.js" integrity="sha384-WPFUvHkB1aHA5TDSZi6xtDgkF0wXJcIIxXhC6h8OT8EH3fC5PWro5pWJ1THjcfEi" crossorigin="anonymous"></script>
+<script src="index.js"></script>
 </html>
