--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             </div>
             <div class="buttons">
                 <div class="create_game">
-                    <button type="button" class="btn btn-primary">Create Room</button>
+                    <form action="/draw">
+                        <button type="submit" class="btn btn-primary">Create Room</button>
+                    </form>
                     <div class="lobby" id="lobby">
                         <h2>Your room Code is:1234</h2>
                         <h3>Waiting for player to join...</h3>
