--- a/drawing.html
+++ b/drawing.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game demo</title>
-</head>
-<body>
-    
+<html>
+<head><meta charset="utf-8"/></head>
+<body  encoding='utf8'>
+  <canvas id='drawzone' width='500' height='500' style='border:1px solid #777'/>
 </body>
+<script src="drawing.js"></script>
 </html>
