--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="row">
-        <div class="col game-body">
-            <div class="account">
-                <form action="/account">
-                    <button class="btn btn-primary btn-circle btn-xl" type="submit">Account</button>
-                </form>
-            </div>
-            <div class="title">
-                <h1>Theen Titans</h1>
-            </div>
+    <div class="header">
+        <form action="/account">
+            <button type="submit" class="btn btn-primary">Account</button>
+        </form>
+        <h1 >Drawize</h1>
+        <form action="/team">
+            <button type="submit" class="btn btn-primary">Team</button>
+        </form>
+    </div>
+  <div class="row">
+  <div class="col-3 col-s-3 menu">
             <div class="buttons">
                 <div class="create_game">
                     <form action="/draw">
@@ -27,28 +28,30 @@
                     <div class="lobby" id="lobby">
                         <h2>Your room Code is:1234</h2>
                         <h3>Waiting for player to join...</h3>
-                        <button type="button" class="btn btn-primary" onclick="close1()">close</button>
+                        <button type="button" onclick="close1()">close</button>
                     </div>
-                    <button type="button" class="btn btn-primary" onclick="open1()">Join Room</button>
+                    <button type="button" onclick="open1()">Join Room</button>
                 </div>
             </div>
             <div class="extra">
                 <a href="">Create an account</a>
             </div>
-            <div>
-                <h1 class="test"></h1>
-            </div>
-        </div>
-        <div class="col leaderboard">
-            <ul class="list-group">
-                <li class="list-group-item">Kushal</li>
-                <li class="list-group-item">Krishna Chaitanya</li>
-                <li class="list-group-item">Saketh</li>
-                <li class="list-group-item">Shashmith</li>
-                <li class="list-group-item">Rishi</li>
-              </ul>
-        </div>
-      </div>
+  </div>
+            <div class="col-6 col-s-9">
+                <h1 style="text-align:center ;">Welcome to Drawize </h1>
+                <p style="text-align:center ;">The place where we have have fun and knowledge</p>
+              </div>
+            
+              <div class="col-3 col-s-12">
+                <h3 style="text-align: center">Leaderboard</h3>
+                <div class="aside">
+                  <h2>Saketh</h2>
+                  <h2>Krishna</h2>
+                  <h2>Kusal</h2>
+                  <h2>Shasmith</h2>
+                  <h2>Vinay</h2>
+                </div>
+              </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 <script src="https://cdn.socket.io/4.5.3/socket.io.min.js" integrity="sha384-WPFUvHkB1aHA5TDSZi6xtDgkF0wXJcIIxXhC6h8OT8EH3fC5PWro5pWJ1THjcfEi" crossorigin="anonymous"></script>
