--- a/game.html
+++ b/game.html
@@ -10,22 +10,31 @@
 </head>
 <body>
     <canvas id="myCanvas" width="800" height="500" style="border:1px solid #000000;"></canvas>
-    <button id="trash" onclick="clears()">🗑️</button>   
-    <button id="pencil" onclick="writes()">✏️</button>   
-    <button><img width="10" height="20" src="eraser.png" alt="eraser" id="eraser" onclick="erases()"></button>         
-    <button style="background-color: red;width: 30px;height: 30px" onclick="change_color('red')"></button>        
-    <button style="background-color: blue;width: 30px;height: 30px" onclick="change_color('blue')"></button>        
-    <button style="background-color: green;width: 30px;height: 30px" onclick="change_color('green')"></button>        
-    <button style="background-color: white;width: 30px;height: 30px" onclick="change_color('white')"></button>        
-    <button style="background-color: yellow;width: 30px;height: 30px" onclick="change_color('yellow')"></button>        
-    <button style="background-color: orange;width: 30px;height: 30px" onclick="change_color('orange')"></button>        
-    <button style="background-color: black;width: 30px;height: 30px" onclick="change_color('black')"></button>        
-    <button style="background-color: pink;width: 30px;height: 30px" onclick="change_color('pink')"></button>        
-    <button style="background-color:brown;width: 30px;height: 30px" onclick="change_color('brown')"></button>
-    <!-- <button style="font-size: 100px;border-color: white;background-color: white;box-shadow: 0 0 white;" onclick="change_width(5)">.</button>
-    <button style="font-size: 700px;border-color: white;background-color: white;box-shadow: 0 0 white;" onclick="change_width(11)">.</button>
-    <button style="font-size: 1000px;border-color: white;background-color: white;box-shadow: 0 0 white;" onclick="change_width(20)">.</button> -->
-    <input type="text" id="myInput">
+    <div class="col">
+        <ul class="list-group" id="players">
+
+        </ul>
+    </div>
+    <div id="drawing_tools">
+        <button id="trash" onclick="clears()">🗑️</button>   
+        <button id="pencil" onclick="writes()">✏️</button>   
+        <button><img width="10" height="20" src="eraser.png" alt="eraser" id="eraser" onclick="erases()"></button>         
+        <button style="background-color: red;width: 30px;height: 30px" onclick="change_color('red')"></button>        
+        <button style="background-color: blue;width: 30px;height: 30px" onclick="change_color('blue')"></button>        
+        <button style="background-color: green;width: 30px;height: 30px" onclick="change_color('green')"></button>        
+        <button style="background-color: white;width: 30px;height: 30px" onclick="change_color('white')"></button>        
+        <button style="background-color: yellow;width: 30px;height: 30px" onclick="change_color('yellow')"></button>        
+        <button style="background-color: orange;width: 30px;height: 30px" onclick="change_color('orange')"></button>        
+        <button style="background-color: black;width: 30px;height: 30px" onclick="change_color('black')"></button>        
+        <button style="background-color: pink;width: 30px;height: 30px" onclick="change_color('pink')"></button>        
+        <button style="background-color:brown;width: 30px;height: 30px" onclick="change_color('brown')"></button>
+        <!-- <button style="font-size: 100px;border-color: white;background-color: white;box-shadow: 0 0 white;" onclick="change_width(5)">.</button>
+        <button style="font-size: 700px;border-color: white;background-color: white;box-shadow: 0 0 white;" onclick="change_width(11)">.</button>
+        <button style="font-size: 1000px;border-color: white;background-color: white;box-shadow: 0 0 white;" onclick="change_width(20)">.</button> -->
+    </div>
+    <div id="guess_input">
+        <input type="text" id="myInput">
+    </div>
     <div id="id"></div>
     <div id="guess"></div>
 </body>
