--- a/index.html
+++ b/index.html
@@ -42,6 +42,20 @@
                 <h1 class="test"></h1>
             </div>
         </div>
+        <div class="col-6 col-s-9">
+          <h3 style="text-align: center">Welcome to Drawize</h3>
+          <p style="text-align:center">The place where we have fun and knowldge</p>
+        </div>
+        <div class="col-3 col-s-12">
+          <h3 style="text-align:center">Leaderboard</h3>
+          <div class="aside">
+            <h2>Saketh</h2>
+            <h2>Krishna</h2>
+            <h2>Kusal</h2>
+            <h2>Chuchu</h2>
+            <h2>Vinay</h2>
+          </div>
+        </div>
       </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
