--- a/index.html
+++ b/index.html
@@ -1,64 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Artwist- Guess the Art</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div class="header">
-        <form action="/account">
-            <button type="submit" class="btn btn-primary">Account</button>
-        </form>
-        <h1 >Drawize</h1>
-        <form action="/team">
-            <button type="submit" class="btn btn-primary">Team</button>
-        </form>
+      <form action="/account">
+        <button type="submit" class="btn btn-primary">Account</button>
+      </form>
+      <h1>Drawize</h1>
+      <form action="/team">
+        <button type="submit" class="btn btn-primary">Team</button>
+      </form>
     </div>
-  <div class="row">
-  <div class="col-3 col-s-3 menu">
-            <div class="buttons">
-                <div class="create_game">
-                    <button type="button" class="btn btn-primary" onclick="open1()">Create Room</button>
-                    <div class="lobby" id="lobby">
-                        <h2 id="room_code">Your room Code is: </h2>
-                        <h3>Waiting for player to join...</h3>
-                        <button type="button" onclick="close1()">close</button>
-                    </div>
-                    <div class="lobby" id="join">
-                      <input type="text">
-                      <button type="button" class="btn btn-primary" onclick="close2()">close</button>
-                    </div>                    
-                      <button type="button" class="btn btn-primary" onclick="open2()"">Join Room</button>
-                </div>
+    <!-- <div class="col-3 col-s-9 menu">
+        <div class="buttons">
+          <div class="create_game">
+            <button type="button" class="btn btn-primary" onclick="open1()">
+              Create Room
+            </button>
+            <div class="lobby" id="lobby">
+              <h2 id="room_code">Your room Code is:</h2>
+              <h3>Waiting for player to join...</h3>
+              <button type="button" onclick="close1()">close</button>
             </div>
-            <div class="extra">
-                <a href="">Create an account</a>
+            <div class="lobby" id="join">
+              <form action="/room">
+                <input
+                  type="text"
+                  name="room_code"
+                  placeholder="Enter Room Code"
+                  method="post"
+                />
+                <button
+                  type="submit"
+                  class="btn btn-primary"
+                  onclick="joinroom()"
+                >
+                  Join Room
+                </button>
+              </form>
             </div>
-            <div>
-                <h1 class="test"></h1>
-            </div>
+            <button type="button" class="btn btn-primary" onclick="opened2()">
+              Join Room
+            </button>
+          </div>
         </div>
-        <div class="col-6 col-s-9">
-          <h3 style="text-align: center">Welcome to Drawize</h3>
-          <p style="text-align:center">The place where we have fun and knowldge</p>
+        <div class="extra">
+          <a href="">Create an account</a>
         </div>
-        <div class="col-3 col-s-12">
-          <h3 style="text-align:center">Leaderboard</h3>
-          <div class="aside">
-            <h2>Saketh</h2>
-            <h2>Krishna</h2>
-            <h2>Kusal</h2>
-            <h2>Chuchu</h2>
-            <h2>Vinay</h2>
+        <div>
+          <h1 class="test"></h1>
+        </div>
+      </div>
+      <div class="col-6 col-s-9">
+        <h3 style="text-align: center">Welcome to Drawize</h3>
+        <p style="text-align: center">
+          The place where we have fun and knowldge
+        </p>
+        <img src="./logo.jpg" alt="Artwist- Guess the Art" />
+      </div> -->
+    <div class="background">
+      <div class="col-s-9 col-9">
+        <div
+          class="row"
+          style="height: 60vh; width: fit-content; display: block; margin: auto"
+        >
+          <img
+            src="./logo.jpg"
+            alt="Artwist- Guess the Art"
+            style="display: block; margin: auto; height: 77%"
+          />
+        </div>
+        <div class="row">
+          <div
+            class="buttons"
+            style="
+              display: flex;
+              flex-wrap: nowrap;
+              justify-content: center;
+              margin-bottom: 10px;
+              margin-top: -40px;
+            "
+          >
+            <button
+              type="button"
+              class="btn btn-primary"
+              onclick="open1()"
+              style="margin-left: 30px; margin-right: 15px"
+            >
+              Create Room
+            </button>
+            <div class="lobby" id="lobby">
+              <h2 id="room_code">Your room Code is:</h2>
+              <h3>Waiting for player to join...</h3>
+              <button type="button" onclick="close1()">close</button>
+            </div>
+            <div class="lobby" id="join">
+              <form action="/room">
+                <input
+                  type="text"
+                  name="room_code"
+                  placeholder="Enter Room Code"
+                  method="post"
+                />
+                <button
+                  type="submit"
+                  class="btn btn-primary"
+                  onclick="joinroom()"
+                >
+                  Join Room
+                </button>
+              </form>
+            </div>
+            <button
+              type="button"
+              class="btn btn-primary"
+              onclick="opened2()"
+              style="margin-left: 15px; margin-right: 30px"
+            >
+              Join Room
+            </button>
+          </div>
+          <div
+            style="display: flex; flex-wrap: nowrap; justify-content: center"
+          >
+            <button
+              type="button"
+              class="btn btn-primary"
+              onclick="signin()"
+              style="width: auto"
+            >
+              Create an Account
+            </button>
           </div>
         </div>
       </div>
-</body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-<script src="https://cdn.socket.io/4.5.3/socket.io.min.js" integrity="sha384-WPFUvHkB1aHA5TDSZi6xtDgkF0wXJcIIxXhC6h8OT8EH3fC5PWro5pWJ1THjcfEi" crossorigin="anonymous"></script>
-<script src="index.js"></script>
+      <div class="col-3 col-s-12">
+        <h3 style="text-align: center">Leaderboard</h3>
+        <div class="aside">
+          <h2>Saketh</h2>
+          <h2>Krishna</h2>
+          <h2>Kusal</h2>
+          <h2>Chuchu</h2>
+          <h2>Vinay</h2>
+        </div>
+      </div>
+    </div>
+  </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdn.socket.io/4.5.3/socket.io.min.js"
+    integrity="sha384-WPFUvHkB1aHA5TDSZi6xtDgkF0wXJcIIxXhC6h8OT8EH3fC5PWro5pWJ1THjcfEi"
+    crossorigin="anonymous"
+  ></script>
+  <script src="index.js"></script>
 </html>
