--- a/index.html
+++ b/index.html
@@ -168,5 +168,5 @@
     integrity="sha384-WPFUvHkB1aHA5TDSZi6xtDgkF0wXJcIIxXhC6h8OT8EH3fC5PWro5pWJ1THjcfEi"
     crossorigin="anonymous"
   ></script>
-  <script src="index.js"></script>
+  <script src="main.js"></script>
 </html>
