--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <button type="submit" class="btn btn-primary">Account</button>
       </form>
       <h1>Drawize</h1>
-      <form action="/team">
-        <button type="submit" class="btn btn-primary">Team</button>
+      <form action="/login">
+        <button type="submit" class="btn btn-primary">Login</button>
       </form>
     </div>
     <!-- <div class="col-3 col-s-9 menu">
