--- a/login/login.html
+++ b/login/login.html
@@ -23,17 +23,12 @@
       <button onclick="signOut()" id="signOut">SignOut</button>
     </div>
   </body> -->
-  <body>
+  <!-- <body>
     <header>
       <h1>Portal for Login</h1>
     </header>
     <main>
-      <form
-        id="login_form"
-        class="form_class"
-        action="login/login-access.php"
-        method="post"
-      >
+      <form id="login_form" class="form_class" method="post">
         <div class="form_div">
           <label>Email:</label>
           <input
@@ -72,6 +67,18 @@
     <footer>
       <p>Artwist welcomes you</p>
     </footer>
+  </body> -->
+  <body>
+    <div class="formContainer">
+      <h1>Enter Credentials Here:</h1>
+      <input type="email" placeholder="email here" id="email" />
+      <br />
+      <input type="password" placeholder="password here" id="password" />
+      <br />
+      <button onclick="signUp()" id="signUp">SignUp</button>
+      <button onclick="signIn()" id="signIp">SignIn</button>
+      <button onclick="signOut()" id="signOut">SignOut</button>
+    </div>
   </body>
   <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
