--- a/game/game.html
+++ b/game/game.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./resources/logo.jpg" type="image/x-icon" />
-    <title>Artwist- Room No. <%= room_code %></title>
+    <title>Artwist- Room No. 7694</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,7 +27,7 @@
           background-color: 2px solid black;
         "
       >
-        Your room no is <%= room_code %> Enjoy!!
+        Your room no is 7694 Enjoy!!
       </h1>
       <button class="btn btn-danger logout-btn">LogOut/Exit</button>
     </div>
@@ -37,9 +37,8 @@
         id="players"
       ></div>
       <div class="col-3" id="final_scores"></div>
-      <% if(starter==='true'){ %>
+
       <button onclick="start_game()" id="startgame">Start Game</button>
-      <% } %>
     </div>
     <div id="game" style="display: none">
       <div class="time_count">
@@ -83,7 +82,41 @@
               width="1000px"
               style="border: 8px solid #000000"
             ></canvas>
-            <div id="drawing_tools"></div>
+            <div id="drawing_tools">
+              <button
+                style="
+                  font-size: 100px;
+                  border-color: white;
+                  background-color: white;
+                  box-shadow: 0 0 white;
+                "
+                onclick="change_width(5)"
+              >
+                .
+              </button>
+              <button
+                style="
+                  font-size: 700px;
+                  border-color: white;
+                  background-color: white;
+                  box-shadow: 0 0 white;
+                "
+                onclick="change_width(11)"
+              >
+                .
+              </button>
+              <button
+                style="
+                  font-size: 1000px;
+                  border-color: white;
+                  background-color: white;
+                  box-shadow: 0 0 white;
+                "
+                onclick="change_width(20)"
+              >
+                .
+              </button>
+            </div>
           </div>
           <div id="chat_box" class="col-4 col-s-4">
             <div
@@ -132,7 +165,7 @@
   ></script>
   <script>
     const socket = io();
-    let room_code = "<%-room_code%>";
+    let room_code = "7694";
     socket.emit("room_code", room_code);
   </script>
   <script src="./game.js"></script>
