--- a/login/signUp.html
+++ b/login/signUp.html
@@ -17,7 +17,7 @@
         <div class="form_div">
           <form>
           <label>Email:</label>
-          <input=
+          <input
             class="field_class"
             name="login_txt"
             type="email"
@@ -57,9 +57,10 @@
         <div class="info_div">
           <p>
             Already registered?
-            <button onclick="signIn2()">Login Now</button>
+            <form action="/login">
+              <button onclick="signIn2()">Login Now</button>
+            </form>
           </p>
-        </form>
         </div>
       </div>
     </main>
