signup sending to game and account

--- a/login/login.html
+++ b/login/login.html
@@ -16,13 +16,13 @@
     <main>
       <div class="form_class">
         <div class="form_div">
-          <label>Email:</label>
+          <label>Username:</label>
           <input
             class="field_class"
-            name="login_txt"
-            type="email"
-            id="email"
-            placeholder="example@example.com"
+            name="username_txt"
+            type="text"
+            id="username"
+            placeholder="Enter your username"
             autofocus
           />
           <label>Password:</label>
@@ -57,19 +57,8 @@
       <p>Artwist welcomes you</p>
     </footer>
   </body>
-  <!-- <body>
-    <div class="formContainer">
-      <h1>Enter Credentials Here:</h1>
-      <input type="email" placeholder="email here" id="email" />
-      <br />
-      <input type="password" placeholder="password here" id="password" />
-      <br />
-      <button onclick="signUp()" id="signUp">SignUp</button>
-      <button onclick="signIn()" id="signIp">SignIn</button>
-      <button onclick="signOut()" id="signOut">SignOut</button>
-    </div>
-  </body> -->
+
   <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
-  <script src="form.js"></script>
+  <script src="login.js"></script>
 </html>
