--- a/login/signUp.html
+++ b/login/signUp.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up- Artwist</title>
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+    crossorigin="anonymous"
+  />
     <link rel="stylesheet" href="./loginStyles.css" />
     <link rel="shortcut icon" href="../logo.jpg" type="image/x-icon" />
   </head>
@@ -23,8 +29,6 @@
             type="text"
             id="username"
             placeholder="Enter username"
-            autocomplete=""
-            autofocus
           />
           <label>Password:</label>
           <input
@@ -34,13 +38,12 @@
             type="password"
             id="password"
             placeholder="Password"
-            autocomplete="new-password"
           />
           <label>Confirm Password:</label>
           <input
             id="con_pass"
             class="field_class"
-            name="password_txt"
+            name="password_txt1"
             type="password"
             placeholder="Confirm Password"
           />
@@ -51,12 +54,13 @@
           >
             Sign Up
           </button>
+          </form>
         </div>
         <div class="info_div">
           <p>
             Already registered?
             <form action="/login">
-              <button onclick="signIn2()">Login Now</button>
+              <button class="submit_class" onclick="signIn2()">Login Now</button>
             </form>
           </p>
         </div>
@@ -72,7 +76,8 @@
   <!-- TODO: Add SDKs for Firebase products that you want to use
     https://firebase.google.com/docs/web/setup#available-libraries -->
   <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-firestore.js"></script>
-
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   <script>
     // Your web app's Firebase configuration
     var firebaseConfig = {
